--- a/src/AlloyDemoKit/Web.config
+++ b/src/AlloyDemoKit/Web.config
@@ -29,6 +29,8 @@
     <add key="ParkingFeedUrl" value="http://datatank.stad.gent/4/mobiliteit/bezettingparkingsrealtime.json"/>
     <add key="episerver:DatabaseMode" value="ReadWrite"/>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+    <add key="VulcanUrl" value="http://localhost:9200/" />
+    <add key="VulcanIndex" value="vulcan" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
