--- a/src/AlloyDemoKit/packages.config
+++ b/src/AlloyDemoKit/packages.config
@@ -8,12 +8,13 @@
   <package id="DbLocalizationProvider.EPiServer" version="5.3.0" targetFramework="net462" />
   <package id="DemoChannels" version="11.0.0" targetFramework="net462" />
   <package id="DotNetZip" version="1.13.3" targetFramework="net462" />
+  <package id="Elasticsearch.Net" version="6.6.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="EPiServer.AddOns.Helpers" version="0.4.0.0" targetFramework="net462" />
   <package id="EPiServer.CMS" version="11.11.2" targetFramework="net462" />
   <package id="EPiServer.Cms.AddOns.Blocks" version="2.4.1" targetFramework="net462" />
-  <package id="EPiServer.CMS.AspNet" version="11.11.2" targetFramework="net462" />
-  <package id="EPiServer.CMS.Core" version="11.11.2" targetFramework="net462" />
+  <package id="EPiServer.CMS.AspNet" version="11.11.3" targetFramework="net462" />
+  <package id="EPiServer.CMS.Core" version="11.11.3" targetFramework="net462" />
   <package id="EPiServer.CMS.TinyMce" version="2.7.1" targetFramework="net462" />
   <package id="EPiServer.CMS.UI" version="11.17.1" targetFramework="net462" />
   <package id="EPiServer.CMS.UI.AspNetIdentity" version="11.17.1" targetFramework="net462" />
@@ -25,8 +26,8 @@
   <package id="EPiServer.Forms.Core" version="4.23.0" targetFramework="net462" />
   <package id="EPiServer.Forms.Samples" version="3.5.0" targetFramework="net462" />
   <package id="EPiServer.Forms.UI" version="4.23.0" targetFramework="net462" />
-  <package id="EPiServer.Framework" version="11.11.2" targetFramework="net462" />
-  <package id="EPiServer.Framework.AspNet" version="11.11.2" targetFramework="net462" />
+  <package id="EPiServer.Framework" version="11.11.3" targetFramework="net462" />
+  <package id="EPiServer.Framework.AspNet" version="11.11.3" targetFramework="net462" />
   <package id="EPiServer.GoogleAnalytics" version="2.2.1" targetFramework="net462" />
   <package id="Episerver.GoogleMapsEditor" version="1.0.13.0" targetFramework="net462" />
   <package id="EPiServer.Labs.LanguageManager" version="3.2.0" targetFramework="net462" />
@@ -77,6 +78,7 @@
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Microsoft.Web.Xdt" version="3.0.0" targetFramework="net462" />
+  <package id="NEST" version="6.6.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="NHunspell" version="1.2.5554.16953" targetFramework="net462" />
