--- a/src/Volcan/Volcan.csproj
+++ b/src/Volcan/Volcan.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9FB17B66-E07F-4F71-BAD5-01C5D65D56A5}</ProjectGuid>
+    <ProjectGuid>{50B4794F-9C89-4134-B7A8-62C68D4C809E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VulcanEngine</RootNamespace>
-    <AssemblyName>VulcanEngine</AssemblyName>
+    <RootNamespace>Volcan</RootNamespace>
+    <AssemblyName>Volcan</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,7 +33,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,24 +41,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Main.cs" />
-    <Compile Include="Initialization\IndexInitializationModule.cs" />
-    <Compile Include="Initialization\InitializationModule.cs" />
+    <Compile Include="Extensions\VolcanExtensions.cs" />
+    <Compile Include="Initialization\DependencyInitializationModule.cs" />
+    <Compile Include="VolcanHandler.cs" />
+    <Compile Include="Interfaces\IVolcanIndex.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\VulcanIndexModifier.cs" />
+    <Compile Include="Services\VolcanIndex.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="TcbInternetSolutions.Vulcan.AttachmentIndexer">
-      <Version>5.0.0</Version>
+    <PackageReference Include="Elasticsearch.Net">
+      <Version>6.6.0</Version>
     </PackageReference>
-    <PackageReference Include="TcbInternetSolutions.Vulcan.Core">
-      <Version>5.0.3</Version>
+    <PackageReference Include="EPiServer.CMS.Core">
+      <Version>11.11.3</Version>
     </PackageReference>
-    <PackageReference Include="TcbInternetSolutions.Vulcan.Core.SearchProviders">
-      <Version>5.0.0</Version>
+    <PackageReference Include="EPiServer.Framework">
+      <Version>11.11.3</Version>
     </PackageReference>
-    <PackageReference Include="TcbInternetSolutions.Vulcan.UI">
-      <Version>5.0.0</Version>
+    <PackageReference Include="NEST">
+      <Version>6.6.0</Version>
+    </PackageReference>
+    <PackageReference Include="NEST.JsonNetSerializer">
+      <Version>6.4.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
